# SDRPP

./: .gitignore  CMakeLists.txt  license  readme.md  sdrpp.desktop
.github/ISSUE_TEMPLATE/: bug_report.md
core/: CMakeLists.txt
core/backends/glfw/: backend.cpp
core/backends/sdl2/: backend.cpp
core/libcorrect/: CMakeLists.txt
core/src/: config.cpp  config.h  core.cpp  core.h  credits.cpp  credits.h
core/src/dsp/: block.h  chain.h  operator.h  types.h
core/src/gui/: main_window.cpp  main_window.h  style.cpp  tuner.cpp
core/src/imgui/: imgui_widgets.cpp
core/src/signal_path/: iq_frontend.cpp  iq_frontend.h  sink.cpp  sink.h  source.cpp  source.h  vfo_manager.cpp
core/src/utils/: auto_reset_event.h  flog.cpp  flog.h  freq_formatting.h  mpsc_queue.h  net.cpp  net.h  networking.cpp  networking.h  riff.cpp  stack_trace.cpp  stack_trace.h  threading.cpp  threading.h  wav.cpp  wav.h
decoder_modules/radio/src/: radio_module.h  rds.cpp
misc_modules/frequency_manager/src/: main.cpp
misc_modules/recorder/: CMakeLists.txt
misc_modules/recorder/src/: main.cpp
root/res/bandplans/: general.json
root/res/colormaps/: sdrsharp.json  spectravue.json
root/res/cty/: map.json
sink_modules/audio_sink/src/: main.cpp
sink_modules/network_sink/src/: main.cpp
sink_modules/new_portaudio_sink/src/: main.cpp
source_modules/airspy_source/src/: main.cpp
source_modules/airspyhf_source/src/: main.cpp
source_modules/hpsdr_source/: CMakeLists.txt
source_modules/kiwisdr_source/: CMakeLists.txt
source_modules/test_source/: CMakeLists.txt
src/: main.cpp
(+74 files in other folders)
